# dapla-toolbelt-pseudo

./: .cookiecutter.json  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  backstage.yaml  codecov.yml  flake.nix  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build.yml  constraints.txt  docs.yml  documentation.yml  labeler.yml  pseudo-service-integration-test.yaml  release.yml  scheduled-update.yml  tests.yml
codeofconduct/: index.html
contributing/: index.html
docs/: conf.py  gen_ref_pages.py  index.md  reference.md  requirements.txt
examples/: depseudo_examples.ipynb  local_testing.py  pseudo_examples.ipynb
license/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/dapla_pseudo/: index.html
reference/dapla_pseudo/constants/: index.html
reference/dapla_pseudo/exceptions/: index.html
reference/dapla_pseudo/models/: index.html
reference/dapla_pseudo/types/: index.html
reference/dapla_pseudo/utils/: index.html
reference/dapla_pseudo/v1/: index.html
reference/dapla_pseudo/v1/builder_models/: index.html
reference/dapla_pseudo/v1/builder_pseudo/: index.html
reference/dapla_pseudo/v1/builder_validation/: index.html
reference/dapla_pseudo/v1/client/: index.html
reference/dapla_pseudo/v1/models/: index.html
reference/dapla_pseudo/v1/ops/: index.html
reference/dapla_pseudo/v1/supported_file_format/: index.html
search/: search_index.json
src/dapla_pseudo/: __init__.py  constants.py  exceptions.py  models.py  types.py  utils.py
src/dapla_pseudo/globberator/: __init__.py  traverser.py
src/dapla_pseudo/v1/: __init__.py  api_models.py  baseclass.py  baseclasses.py  builder.py  builder_models.py  builder_pseudo.py  builder_stable_id.py  builder_validation.py  client.py  depseudo.py  models.py  mutable_dataframe.py  ops.py  pseudo.py  pseudo_commons.py  repseudo.py  result.py  supported_file_format.py  validation.py
src/dapla_pseudo/v1/.ipynb_checkpoints/: client-checkpoint.py  ops-checkpoint.py
src/dapla_pseudo/v1/models/: api.py  core.py
tests/: __init__.py  builder_examples.ipynb  conftest.py  depseudo_examples.ipynb  integration_test.ipynb  manual_tester.py  pseudo_examples.ipynb  pseudonymize_examples.ipynb  test_utils.py
tests/data/: diverse_datatypes.json  kontaktopplysninger.json  person_3_daead_ssb_common_key_1.json  person_3_sid_deid.json  personer.csv  personer.json  personer_hierarchical.json  personer_hierarchical_complex.json  personer_hierarchical_complex_pseudonymized.json  personer_hierarchical_inner_list.json  personer_hierarchical_inner_list_pseudonymized.json  personer_hierarchical_null.json  personer_hierarchical_null_pseudonymized.json  personer_hierarchical_pseudonymized.json  personer_hierarchical_redacted.json  personer_invalid_fnr.csv  personer_metadata.json  personer_pseudonymized.csv  personer_pseudonymized.json  personer_pseudonymized_daead_ssb_common_key_1.json  personer_pseudonymized_daead_ssb_common_key_2.json  personer_pseudonymized_default_encryption.csv  personer_pseudonymized_default_encryption.json  personer_pseudonymized_default_encryption_metadata.json  personer_pseudonymized_default_encryption_ssb_common_key_2.csv  personer_pseudonymized_papis_compatible_encryption.json  personer_pseudonymized_sid_daead_ssb_common_key_2.json  personer_pseudonymized_sid_fnr.json
tests/data/datadoc/: expected_metadata_test_pseudonymize_default_encryption.json  expected_metadata_test_pseudonymize_default_encryption_all_fields.json  expected_metadata_test_pseudonymize_default_encryption_null.json  expected_metadata_test_pseudonymize_default_encryption_synchronous.json  expected_metadata_test_pseudonymize_hierarchical.json  expected_metadata_test_pseudonymize_hierarchical_inner_list.json  expected_metadata_test_pseudonymize_hierarchical_null.json  expected_metadata_test_pseudonymize_hierarchical_redact.json  expected_metadata_test_pseudonymize_papis_compatible_encryption.json  expected_metadata_test_pseudonymize_sid.json  expected_metadata_test_pseudonymize_sid_null.json
tests/globberator/: test_globberator.py
tests/integration/: __init__.py  test_integration_deseudonymize.py  test_integration_pseudonymize.py  test_integration_repseudonymize.py  test_integration_result.py  test_integration_validate.py  test_pseudonymize.py  utils.py
tests/perf/: README.md  pseudo_rules_2024.json  traverse_tester.py
tests/v1/: __init__.py  test_api_models.py  test_builder.py  test_builder_models.py  test_builder_pseudo.py  test_builder_stable_id.py  test_client.py  test_depseudo.py  test_depseudonymize.py  test_models.py  test_ops.py  test_pseudo.py  test_pseudo_commons.py  test_pseudonymize.py  test_repseudo.py  test_repseudonymize.py  test_result.py  test_stable_id.py  test_supported_file_format.py
tests/v1/integration/: conftest.py  lazy_memory_worker.py  test_client.py  test_depseudonymize.py  test_hierarchical.py  test_integration_deseudonymize.py  test_integration_pseudonymize.py  test_integration_repseudonymize.py  test_integration_result.py  test_integration_validate.py  test_large_file.py  test_lazy_regression.py  test_pseudonymize.py  test_repseudonymize.py  test_result.py  test_validate.py  utils.py
tests/v1/test_files/: test.json  test.xml
tests/v1/unit/: conftest.py  test_base_pseudonymizer.py  test_base_rule_constructor.py  test_client.py  test_models_core.py  test_mutable_dataframe.py  test_result.py  test_supported_file_format.py  test_validation.py
tests/v1/unit/test_files/: file_no_extension  test.parquet
