[project]
name = "dapla-toolbelt-pseudo"
version = "6.0.2"
description = "Pseudonymization extensions for Dapla"
authors = [{ name = "Dapla Developers", email = "dapla-platform-developers@ssb.no" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "MIT"
classifiers = ["Development Status :: 4 - Beta"]
dependencies = [
    "pydantic>=2.12",
    "numpy>=1.26.4",
    "pyhumps>=3.8.0",
    "types-requests>=2.28.11",
    "pandas-stubs>=1.5.3.230304",
    "puremagic>=1.15",
    "python-ulid>=2.2.0",
    "cryptography>41.0.0",
    "dapla-auth-client>=1.2.1",
    "fsspec>=2023.5.0",
    "polars>=1.31.0",
    "pygments>2.15.0",
    "click>=8.0.1",
    "dapla-toolbelt-metadata>=0.10.5,<1.0.0",
    "cloudpathlib[gs]>=0.17.0",
    "pyarrow>=14.0.2",
    "orjson>=3.10.1",
    "wcmatch>=8.5.1",
    "msgspec>=0.18.6",
    "aiohttp>=3.10.5",
    "aiohttp-retry>=2.9.1",
    "pytest-asyncio>=0.24.0",
    "gcsfs>=2025.5.1,<2026",
    "deprecated>=1.2.18",
    "types-deprecated>=1.2.15.20250304",
]

[project.urls]
Homepage = "https://github.com/statisticsnorway/dapla-toolbelt-pseudo"
Repository = "https://github.com/statisticsnorway/dapla-toolbelt-pseudo"
Documentation = "https://statisticsnorway.github.io/dapla-toolbelt-pseudo"
Changelog = "https://github.com/statisticsnorway/dapla-toolbelt-pseudo/releases"

[dependency-groups]
lint = [
    "black[jupyter]>=25.11.0",
    "pre-commit>=4.4.0",
    "pre-commit-hooks>=6.0.0",
    "pydoclint>=0.8.3",
    "ruff>=0.14.5"
]
doc = [
    "furo>=2025.9.25; python_version >= '3.11'",
    "myst-parser>=4.0.1; python_version >= '3.11'",
    "sphinx>=8.2.3; python_version >= '3.11'",
    "sphinx-autobuild>=2025.8.25; python_version >= '3.11'",
    "sphinx-autodoc-typehints>=3.5.2; python_version >= '3.11'",
    "sphinx-click>=6.1.0; python_version >= '3.11'",
    "dapla-toolbelt-pseudo @ file:///${PROJECT_ROOT}"
]
test = ["typeguard>=2.13.3"]
dev = [
    "pydantic>=2.12",
    "pytest-cases>=3.8.5",
    "pytest-mock>=3.14",
    "sphinx>=6.2.1",
    "ipykernel>=6.0.0",
    "mock>=4.0.3",
    "pandas-stubs>=1.5.3.230304",
    "nbstripout>=0.6.1",
    "ipython>=8.11.0",
    "jupyterlab>=4.0.0",
    "google-auth>= 2.25.2",
    "pytest-xdist[psutil]>=3.8.0",
    {include-group = "lint"},
    {include-group = "doc"},
    "deptry>=0.24.0",
    "mypy>=1.18.2",
    "pygments>=2.19.0",
    "pytest>=9.0.0",
    "typeguard>=2.13.3",
    "xdoctest[colors]>=1.3.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/dapla_pseudo"]

[tool.hatch.build.targets.wheel]
include = ["src/dapla_pseudo"]

[tool.hatch.build.targets.wheel.sources]
"src/dapla_pseudo" = "dapla_pseudo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Allow missing type hints in third-party libraries without type information.
module = [
    'google.auth.exceptions',
    'gcsfs',
    'gcsfs.core',
    'dapla',
    'fsspec',
    'fsspec.spec',
    'typeguard',
    'puremagic',
    'google.*',
    'google.oauth2',
    'pytest_cases',
    'pytest_mock'
]
ignore_missing_imports = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "dapla_pseudo.tests.*"
disallow_untyped_defs = true

[tool.pydoclint]
style = "google"
exclude = '\.git|\.nox'
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
allow-init-docstring = true
quiet = true

[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py310"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py",
]
external = ["DOC"] # Avoiding removing any codes starting with `DOC` from any `# noqa` directives.

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "A",    # prevent using keywords that clobber python builtins
    "ANN",  # check type annotations
    "B",    # bugbear: security warnings
    "D",    # documentation
    "E",    # pycodestyle
    "F",    # pyflakes
    "ISC",  # implicit string concatenation
    "I",    # sort imports
    "UP",   # alert you when better syntax is available in your python version
    "RUF",  # the ruff developer's own rules
]
ignore = [
    "ANN101", # Supress missing-type-self.
    "ANN102", # Supress missing-type-cls.
    "ANN202", # Don't require return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/**" = [
    # asserts are encouraged in pytest
    "S101",
    # return annotations don't add value for test functions
    "ANN201",
    # docstrings are overkill for test functions
    "D100",
    "D101",
    "D102",
    "D103",
]
